--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
     <h2>Coffee Central</h2>
-    <img src="coffee_bar.jpeg"     width="100%"        alt="Bread">
+    <img src="coffee_bar.jpeg"     width="100%"        alt="Coffee shop background picture">
 
 <h1> <b>  Welcome to Coffee Central </b> </h1>
 <p>Here at CC we have a mission. That is to provide good quality, hearty coffees and tasty pastries to our customers. At an affordable price too, all our coffees are sustainably sourced and delicious.  
