--- a/pastry.html
+++ b/pastry.html
@@ -30,17 +30,17 @@
 
         <div   id="img-container"   >
             <div   id="image1" >
-            <img src="croissant.jpeg" alt="pastry menu" width=100% height="70%">
+            <img src="croissant.jpeg" alt="Croissant picture" width=100% height="70%">
             <p    class="text1"> Croissant: £3 </p>                
               <!-- <p>Fresh and home made. Flaky and irresistable. </p>     -->
             </div>
             
             <div   id="image1" >
-            <img src="cinnamon_roll.jpeg" alt="pastry menu" width=100% height="70%">
+            <img src="cinnamon_roll.jpeg" alt="Cinnamon roll picture" width=100% height="70%">
             <p    class="text1">  cinnamon roll: £4  </p>
         </div>
             <div   id="image1" >
-            <img src="pain_au_chocolat.jpeg" alt="pastry menu" width=100% height="70%">
+            <img src="pain_au_chocolat.jpeg" alt="pain au chocolat picture" width=100% height="70%">
             <p    class="text1"> Pain aue chocolat: £1.55</p>
         </div>
     </div>
