--- a/coffee.html
+++ b/coffee.html
@@ -33,17 +33,17 @@
 
     <div   id="img-container">
     <div   id="image1" >
-    <img src="iced_coffee.jpeg" alt="coffee bar" width=100% height="70%">
+    <img src="iced_coffee.jpeg" alt="Iced coffee picture" width=100% height="70%">
     <p    class="text1"> Iced Coffee £5 </p>                
       <!-- <p>Fresh and ideal for a hot day, our iced coffee is a new addition to our menu. </p>     -->
     </div>
     
     <div   id="image1" >
-    <img src="latte.jpeg" alt="coffee bar" width=100% height="70%">
+    <img src="latte.jpeg" alt="Latte picture" width=100% height="70%">
     <p    class="text1"> Latte £5.50 </p>
 </div>
     <div   id="image1" >
-    <img src="espresso.jpeg" alt="coffee bar" width=100% height="70%">
+    <img src="espresso.jpeg" alt="Espresso picture" width=100% height="70%">
     <p    class="text1"> Espresso £3 single  £5 double </p>
 </div>
 </div>
